--- a/index-cytotec.html
+++ b/index-cytotec.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-cytotec.css">
-    <title>Купити Ліки Сайтотек в Україні - Cytotec таблетки на Фармітал</title>
+    <title>Купити Ліки Сайтотек,Мізопростол,Цитотек в Україні - Cytotec таблетки на Фармітал</title>
 </head>
 <body>
     <header>
@@ -47,11 +47,11 @@
         </div>
     </header>
     <div class="wrapper">
-        <h1>Сайтотек / Cytotec / Цитотек</h1>
+        <h1>Сайтотек / Мізопростол / Cytotec / Цитотек</h1>
         <p class="prod">Виробник: <b>Італія</b></p>
         <div class="main-price clear">
             <div class="foto-cytotec">
-                <img class="foto" src="./img/cytotec2.jpg" alt="купити сайтотек,cytotec,цитотек в Україні">
+                <img class="foto" src="./img/cytotec2.jpg" alt="купити сайтотек,мізопростол,cytotec,цитотек в Україні">
             </div>
             <div class="price-cytotec">
                 <h3 class="block">Контактна інформація:</h3>
@@ -64,8 +64,8 @@
         </div>
     </div>
     <div class="main-info wrapper">
-        <h2>Купити Сайтотек - Сytotec:</h2>
-            <p>Для того,щоб купити Сайтотек на фарміталь, вам потрібно лише зателефонувати до нашого менеджера.</p>
+        <h2>Купити Сайтотек,Мізопростол - Сytotec:</h2>
+            <p>Для того,щоб купити Сайтотек,Мізопростол на фарміталь, вам потрібно лише зателефонувати до нашого менеджера.</p>
             <p>Доставка Cytotec здійснюється транспортними компаніями, терміни виконання замовлення обумовлюються менеджером Фармітал.
                 Ви можете замовити Сайтотек,Цитотек у містах: Одеса, Херсон, Чернігів, Сєверодонецьк, Бердянськ, Бровари, Дніпро, Вінниця, Київ, Слов'янськ, Полтава, Краматорськ, Біла Церква, Кам'янське, Маріуполь, Чернівці, Олександрія, Кам'янець-Подільський, Львів, Запоріжжя, Кропивницький, Житомир, Івано-Франківськ, Суми, Черкаси, Костянтинівка, Мелітополь, Кривий Ріг, Рівне, Луцьк, Нікополь, Павлоград, Ужгород, Кременчук, Лисичанськ, Хмельницький, Тернопіль, Харків, Миколаїв, а також в інших населених пунктах України.
             </p>
