--- a/index-medics.html
+++ b/index-medics.html
@@ -69,7 +69,7 @@
             <a href="index-zarontin.html">
                 <div class="zarontin-price">
                     <img class="zaron" src="./img/zarontin12.jpg" alt="купити заронтін, zarontin,заронтин в Україні">
-                    <p class="detal-inf">Ціна: 1200 грн/уп.</p>
+                    <p class="detal-inf">Ціна: 999 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -113,7 +113,7 @@
         </div>
         <div class="cytotec">
             <div class="cytotec-info">
-                <h2>Сайтотек-(Cytotec)</h2>
+                <h2>Сайтотек,Мізопростол-(Cytotec,Чітотек)</h2>
                 <p>Гастропротекторний засіб, синтетичний аналог PgE1. Збільшує утворення захисного слизу та гідрокарбонату; сприяє посиленню кровотоку у слизовій оболонці.
                     Прискорює загоєння ерозій, виразки шлунка та 12-палої кишки, у ряді випадків здатний запобігти їх утворенню.
                     Препарат безпосередньо впливає на парієтальні клітини шлунка, пригнічує базальну, нічну, стимульовану (їжею, гістаміном, пентагастрином) секрецію HCl.
@@ -122,7 +122,7 @@
             </div>
             <a href="index-cytotec.html">
                 <div class="cytotec-price">
-                    <img class="cyt" src="./img/cytotec.jpg" alt="купити сайтотек,cytotec,цитотек в Україні">
+                    <img class="cyt" src="./img/cytotec.jpg" alt="купити сайтотек,cytotec,цитотек,мізопростол в Україні">
                     <p class="detal-inf">Ціна: 750 грн/уп.</p>
                 </div>
             </a>
@@ -141,7 +141,7 @@
             </div>
             <a href="index-zymafluor.html">
                 <div class="zymafluor-price">
-                    <img class="zym" src="./img/zymafluor.jpg" alt="купити зімафлуор,zymafluor,зимафлуор в Україні">
+                    <img class="zym" src="./img/zymaf-max.jpg" alt="купити зімафлуор,zymafluor,зимафлуор в Україні">
                     <p class="detal-inf">Ціна: 750 грн/уп.</p>
                 </div>
             </a>
@@ -172,6 +172,131 @@
                 </div>
             </a>
         </div>
+        <div class="plavix">
+            <div class="plavix-info">
+                <h2>Плавікс №84 Польша-(Plavix №84 Poland)</h2>
+                <p>Клопідогрель селективно пригнічує зв’язування аденозиндифосфату (АДФ) з рецептором на поверхні тромбоциту та наступну активацію комплексу GPIIb/IIIa під дією АДФ, і, таким чином, пригнічує агрегацію тромбоцитів.
+                    Для утворення активного інгібітору агрегації тромбоцитів необхіднабіо трансформація клопідогрелю. Клопідогрель також пригнічує агрегацію тромбоцитів, індуковану іншими агоністами, шляхом блокування підвищення активності тромбоцитів вивільненим АДФ. 
+                    Клопідогрель не зворотно зв’язується зАДФ-рецепторами тромбоцитів. Отже, тромбоцити, що увійшли у взаємодію зклопідогрелем, ушкоджуються до кінця їх життєвого циклу, і нормальна функція тромбоцитів відновлюється зі швидкістю, що відповідає швидкості оновлення тромбоцитів.
+                </p>
+                <p><a href="index-plavix.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="index-plavix.html">
+                <div class="plavix-price">
+                    <img class="pol" src="/img/pl-pol.jpg" alt="купити плавикс,plavix,плавікс №84 Польша в Україні">
+                    <p class="detal-inf">Ціна: 999 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="plavix">
+            <div class="plavix-info">
+                <h2>Плавікс №28 Туреччина-(Plavix №28 Turkey)</h2>
+                <p>Клопідогрель селективно пригнічує зв’язування аденозиндифосфату (АДФ) з рецептором на поверхні тромбоциту та наступну активацію комплексу GPIIb/IIIa під дією АДФ, і, таким чином, пригнічує агрегацію тромбоцитів.
+                    Для утворення активного інгібітору агрегації тромбоцитів необхіднабіо трансформація клопідогрелю. Клопідогрель також пригнічує агрегацію тромбоцитів, індуковану іншими агоністами, шляхом блокування підвищення активності тромбоцитів вивільненим АДФ. 
+                    Клопідогрель не зворотно зв’язується зАДФ-рецепторами тромбоцитів. Отже, тромбоцити, що увійшли у взаємодію зклопідогрелем, ушкоджуються до кінця їх життєвого циклу, і нормальна функція тромбоцитів відновлюється зі швидкістю, що відповідає швидкості оновлення тромбоцитів.
+                </p>
+                <p><a href="index-plavix-tur.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="index-plavix-tur.html">
+                <div class="plavix-price">
+                    <img class="pol" src="/img/pl-tur.jpg" alt="купити плавикс,plavix,плавікс №28 Туреччина в Україні">
+                    <p class="detal-inf">Ціна: 330 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="methergin">
+            <div class="methergin-info">
+                <h2>Метергін-(Метілeргометрін) / Methergin(Metilergometrina)</h2>
+                <p>Methergin використовується в акушерстві: <br>
+                    Для лікування неповної інволюції матки (розширена матка із-за слизу, крові та тканин, які неможливо усунути), лохіометрії та післяпологової кровотечі.
+                    Methergin має метилергометрин як активну речовину, що використовується як потужний стимулятор матки.
+                    Метилергометрин є природним напівсинтетичним похідним, алкалоїдом ріжків, ергометрином.
+                    Ці ліки діють, викликаючи скорочення м'язів матки.
+                    Передбачуваний час початку терапевтичної дії становить від 5 до 10 хвилин, коли препарат вводиться перорально, а фармакологічна дія триває від 4 до 6 годин.</p>
+                <p><a href="index-methergin.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="index-methergin.html">
+                <div class="methergin-price">
+                    <img class="met" src="/img/meter.jpg" alt="купити метергін-(метілeргометрін)/methergin(metilergometrina) в Україні">
+                    <p class="detal-inf">Ціна: 500 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="ultraproct-sup">
+            <div class="ultraproct-sup-info">
+                <h2>Ультрапрокт свічки-(Ultraproct supposte)</h2>
+                <p>Флуокортолон виявляє протизапальну, проти алергічну і протисвербіжну дію. Зменшується дилятація капілярів, міжклітинний набряк і тканинна інфільтрація. Пригнічується проліферація капілярів.
+                    Препарат Ультрапрокт ® містить два естери флуокортолону, початок головної дії яких припадає на різний час, що дозволяє швидко досягти ефекту і довго його підтримувати (двофазна дія).
+                    Цинхокаїн як локальний анестетик зменшує больові відчуття.</p>
+                <p><a href="index-ultraproct-sup.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="index-ultraproct-sup.html">
+                <div class="ultraproct-sup-price">
+                    <img class="ult" src="/img/ultr-sup.jpg" alt="купити ультрапрокт свічки,ultraproct supposte в Україні">
+                    <p class="detal-inf">Ціна: 420 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="ultraproct-ung">
+            <div class="ultraproct-ung-info">
+                <h2>Ультрапрокт мазь-(Ultraproct unguento)</h2>
+                <p>Флуокортолон виявляє протизапальну, проти алергічну і протисвербіжну дію. Зменшується дилятація капілярів, міжклітинний набряк і тканинна інфільтрація. Пригнічується проліферація капілярів.
+                    Препарат Ультрапрокт ® містить два естери флуокортолону, початок головної дії яких припадає на різний час, що дозволяє швидко досягти ефекту і довго його підтримувати (двофазна дія).
+                    Цинхокаїн як локальний анестетик зменшує больові відчуття.</p>
+                <p><a href="index-ultraproct-ung.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="index-ultraproct-ung.html">
+                <div class="ultraproct-ung-price">
+                    <img class="ult" src="/img/ultr-ung.jpg" alt="купити ультрапрокт мазь,ultraproct unguento в Україні">
+                    <p class="detal-inf">Ціна: 420 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="daivonex-ung">
+            <div class="daivonex-ung-info">
+                <h2>Дайвонекс мазь-(Daivonex unguento)</h2>
+                <p>Синтетичний аналог активнішого метаболіту природного вітаміну D3. Викликає дозозалежне гальмування проліферації кератиноцитів 
+                    (значно підвищеної у хворих на псоріаз) і прискорює їх морфологічну диференціацію. Незначно впливає на метаболізм кальцію в організмі. Інгібітор активації Т-лімфоцитів, 
+                    викликаної інтерлейкіном 1.
+                </p>
+                <p><a href="index-daivonex-ung.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="index-daivonex-ung.html">
+                <div class="daivonex-ung-price">
+                    <img class="ult" src="/img/daivon.jpg" alt="купити дайвонекс мазь,daivonex unguento в Україні">
+                    <p class="detal-inf">Ціна: 480 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <!-- <div class="advantan-crema">
+            <div class="advantan-crema-info">
+                <h2>Адвантан Крем 50г-(Advantan Crema 50g)</h2>
+                <p>Адвантан при місцевому застосуванні пригнічує запальні, алергійні реакції шкіри, а також реакції, пов’язані згіперпроліферацією клітин, що приводить до послаблення як об’єктивних симптомів (почервоніння, набряк, інфільтрація, ліхеніфікації), так і суб’єктивних скарг (свербіж, печіння, біль).
+                    При місцевому застосуванні метил преднізолонуацепонату в ефективній дозі системний ефект є мінімальним. При нанесенні навеликі ділянки шкіри рівень кортизолу у плазмі залишається у межах нормального діапазону, не порушується його циркадний ритм. Також не встановлено зменшення екскреції кортизолу у добовій сечі.
+                <p><a href="index-advantan-crema.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="index-advantan-crema.html">
+                <div class="advantan-crema-price">
+                    <img class="ult" src="/img/advan-50.jpg" alt="купить адвантан крем 50г,advantan-crema 50g в Україні">
+                    <p class="detal-inf">Ціна: 500 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="advantan-crema">
+            <div class="advantan-crema-info">
+                <h2>Адвантан Крем 20г-(Advantan Crema 20g)</h2>
+                <p>Адвантан при місцевому застосуванні пригнічує запальні, алергійні реакції шкіри, а також реакції, пов’язані згіперпроліферацією клітин, що приводить до послаблення як об’єктивних симптомів (почервоніння, набряк, інфільтрація, ліхеніфікації), так і суб’єктивних скарг (свербіж, печіння, біль).
+                    При місцевому застосуванні метил преднізолонуацепонату в ефективній дозі системний ефект є мінімальним. При нанесенні навеликі ділянки шкіри рівень кортизолу у плазмі залишається у межах нормального діапазону, не порушується його циркадний ритм. Також не встановлено зменшення екскреції кортизолу у добовій сечі.
+                </p>
+                <p><a href="index-advantan-crema-20g.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="index-advantan-crema-20g.html">
+                <div class="advantan-crema-price">
+                    <img class="ult" src="/img/advan-20.jpg" alt="купити адвантан крем 20г,advantan-crema 20g в Україні">
+                    <p class="detal-inf">Ціна: 400 грн/уп.</p>
+                </div>
+            </a>
+        </div> -->
     </div>
     <footer>
         <div class="footer-top">
