--- a/index-nicetile-tab.html
+++ b/index-nicetile-tab.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="main-info wrapper">
-        <h2>Ніцетіл / Nicetile / Ницетил таблетки:</h2>
+        <h2>Купити Ніцетіл / Nicetile / Ницетил таблетки:</h2>
         <p>Саме в FarmItal ви можете купити Ніцетіл, Nicetile, Ницетил таблетки в Україні. Гарантовано якісні!</p>
         <p>Доставка Nicetile таблетки здійснюється транспортними компаніями, терміни виконання замовлення обумовлюються менеджером Фармітал.
             Ви можете замовити Ніцетіл, Nicetile, Ницетил таблетки у містах: Одеса, Херсон, Чернігів, Сєверодонецьк, Бердянськ, Бровари, Дніпро, Вінниця, Київ, Слов'янськ, Полтава, Краматорськ, Біла Церква, Кам'янське, Маріуполь, Чернівці, Олександрія, Кам'янець-Подільський, Львів, Запоріжжя, Кропивницький, Житомир, Івано-Франківськ, Суми, Черкаси, Костянтинівка, Мелітополь, Кривий Ріг, Рівне, Луцьк, Нікополь, Павлоград, Ужгород, Кременчук, Лисичанськ, Хмельницький, Тернопіль, Харків, Миколаїв, а також в інших населених пунктах України.
