--- a/index-zymafluor.html
+++ b/index-zymafluor.html
@@ -51,7 +51,7 @@
         <p class="prod">Виробник: <b>Німеччина</b></p>
         <div class="main-price clear">
             <div class="foto-zymafluor">
-                <img class="foto" src="./img/zymafluor.jpg" alt="купити зімафлуор,zymafluor,зимафлуор в Україні">
+                <img class="foto" src="./img/zymaf-max.jpg" alt="купити зімафлуор,zymafluor,зимафлуор в Україні">
             </div>
             <div class="price-zymafluor">
                 <h3 class="block">Контактна інформація:</h3>
