--- a/rus/index-colchicine.html
+++ b/rus/index-colchicine.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content = "Колхицин Colchicine Колхицин по самой низкой цене в Украине!">
-    <title>Купить Колхицин,Колхицин,Colchicine в Украине на фармиталь</title>
+    <meta name="description" content = "Колхицын Colchicine Колхицин по самой низкой цене в Украине!">
+    <title>Купить Колхицын,Колхицин,Colchicine в Украине на фармиталь</title>
     <link rel="stylesheet" href="css/style-colchicine.css">
 </head>
 <body>
@@ -48,7 +48,7 @@
         </div>
     </header>
     <div class="wrapper">
-        <h1>Колхіцин / Colchicine / Колхицин</h1>
+        <h1>Колхицын / Colchicine / Колхицин</h1>
         <p class="prod">Производитель: <b>Италия</b></p>
         <div class="main-price">
             <div class="foto-colchicine">
@@ -65,8 +65,8 @@
         </div>
     </div>
     <div class="main-info wrapper">
-        <h2>Купить Колхицин - Colchicine:</h2>
-        <p>Именно в FarmItal вы можете купить колхицин, colchicine, колхицин в Украине, гарантированно качественный!</p>
+        <h2>Купить Колхицин(Колхицын) - Colchicine:</h2>
+        <p>Именно в FarmItal вы можете купить колхицын, colchicine, колхицин в Украине, гарантированно качественный!</p>
         <p>Доставка Colchicine осуществляется транспортными компаниями, сроки выполнения заказа оговариваются менеджером Фармитал.
             Вы можете заказать Колхицин,Колхицин в городах: Одесса, Херсон, Чернигов, Северодонецк, Бердянск, Бровары, Днепр, Винница, Киев, Славянск, Полтава, Краматорск, Белая Церковь, Каменское, Мариуполь, Черновцы, Александрия, Камь янец-подольский, Львов, Запорожье, Кропивницкий, Житомир, Ивано-Франковск, Сумы, Черкассы, Константиновка, Мелитополь, Кривой Рог, Ровно, Луцк, Никополь, Павлоград, Ужгород, Кременчуг, Лисичанск, Хмельницкий, Тернополь, Харьков, Николаев, а также в других населённых пунктах Украины.
         </p>
