--- a/rus/index-cytotec.html
+++ b/rus/index-cytotec.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-cytotec.css">
-    <title>Купить Лекарства Сайтотек в Украине - Cytotec таблетки на Фармитал</title>
+    <title>Купить Лекарства Сайтотек,Цитотек,Мизопростол в Украине - Cytotec таблетки на Фармитал</title>
 </head>
 <body>
     <header>
@@ -47,14 +47,14 @@
         </div>
     </header>
     <div class="wrapper">
-        <h2>Сайтотек / Cytotec / Цитотек</h2>
+        <h1>Сайтотек / Мизопростол / Cytotec / Цитотек</h1>
         <p class="prod">Производитель: <b>Италия</b></p>
         <div class="main-price">
             <div class="foto-cytotec">
-                <img class="foto" src="./img/cytotec2.jpg" alt="купити сайтотек,cytotec,цитотек в Украине">
+                <img class="foto" src="./img/cytotec2.jpg" alt="купити сайтотек,cytotec,цитотек,мизопростол в Украине">
             </div>
             <div class="price-cytotec">
-                <h3 class="block">Контактная информация:</h3>
+                <h2 class="block">Контактная информация:</h2>
                 <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
                 <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
                 <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
@@ -64,10 +64,10 @@
         </div>
     </div>
     <div class="main-info wrapper">
-        <h2>Купить Сайтотек - Cytotec:</h2>
+        <h2>Купить Сайтотек,Мизопростол - Cytotec:</h2>
         <p>Для того чтобы купить Сайтотек на фармиталь, вам нужно только позвонить нашему менеджеру.</p>
         <p>Доставка Cytotec осуществляется транспортными компаниями, сроки выполнения заказа оговариваются менеджером Фармитал.
-            Вы можете заказать Сайтотек,Цитотек в городах: Одесса, Херсон, Чернигов, Северодонецк, Бердянск, Бровары, Днепр, Винница, Киев, Славянск, Полтава, Краматорск, Белая Церковь, Каменское, Мариуполь, Черновцы, Александрия, Камь янец-подольский, Львов, Запорожье, Кропивницкий, Житомир, Ивано-Франковск, Сумы, Черкассы, Константиновка, Мелитополь, Кривой Рог, Ровно, Луцк, Никополь, Павлоград, Ужгород, Кременчуг, Лисичанск, Хмельницкий, Тернополь, Харьков, Николаев, а также в других населённых пунктах Украины.
+            Вы можете заказать Сайтотек,Мизопростол в городах: Одесса, Херсон, Чернигов, Северодонецк, Бердянск, Бровары, Днепр, Винница, Киев, Славянск, Полтава, Краматорск, Белая Церковь, Каменское, Мариуполь, Черновцы, Александрия, Камь янец-подольский, Львов, Запорожье, Кропивницкий, Житомир, Ивано-Франковск, Сумы, Черкассы, Константиновка, Мелитополь, Кривой Рог, Ровно, Луцк, Никополь, Павлоград, Ужгород, Кременчуг, Лисичанск, Хмельницкий, Тернополь, Харьков, Николаев, а также в других населённых пунктах Украины.
         </p>
         <p>Также узнайте больше о Сайтотеке по ссылке: <b><a class="cytotec-com" href="cytotec.com.ua">cytotec.com.ua</a></b></p>
         <h2>Форма выпуска:</h2>
