--- a/rus/index-zarontin.html
+++ b/rus/index-zarontin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -59,7 +59,7 @@
                 <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
                 <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
                 <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-                <p class="price"><b>Цена: 1200 грн/уп.</b></p>
+                <p class="price"><b>Цена: 999 грн/уп.</b></p>
                 <p class="stock"><b>В наличии</b></p>
             </div>
         </div>
