--- a/rus/index-zymafluor.html
+++ b/rus/index-zymafluor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,11 +47,11 @@
         </div>
     </header>
     <div class="wrapper">
-        <h2>Зімафлуор / Zymafluor / Зимафлуор - (Німеччина)</h2>
-        <p class="prod">Виробник: <b>Німеччина</b></p>
+        <h2>Зімафлуор / Zymafluor / Зимафлуор - (Германия)</h2>
+        <p class="prod">Производитель: <b>Германия</b></p>
         <div class="main-price clear">
             <div class="foto-zymafluor">
-                <img class="foto" src="./img/zymafluor.jpg" alt="купить зимафлуор,zymafluor,зимафлуор в Украине">
+                <img class="foto" src="../img/zymaf-max.jpg" alt="купить зимафлуор,zymafluor,зимафлуор в Украине">
             </div>
             <div class="price-zymafluor">
                 <h3 class="block">Контактная информация:</h3>
