--- a/rus/index.html
+++ b/rus/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,8 +55,8 @@
                 <p>Кроме самых низких цен, мы предоставляем своим клиентам качественную и надежную продукцию, качество которой утверждено на Европейском уровне!</p>
             </div>
         </div>
+        <h2>Почему нужно выбирать именно FarmItal?</h2>
         <div class="main-center">
-            <h2>Почему нужно выбирать именно FarmItal?</h2>
             <div class="about-us mark">
                 <h3>В аптеке FarmItal качественные лекарства от Европейских производителей:</h3>
                 <p>Лекарства доставляют из Европы, где они проходят сертификацию по самым высоким стандартам здравоохранения.</p>
@@ -100,7 +100,7 @@
             <div class="zarontin ret column">
                 <img src="img/zarontin12.jpg" alt="купить заронтин, заронтин,заронтин в Украине">
                 <h2>Заронтин – оказывает противосудорожное, миорелаксивное и анальгетическое действие. Снижает вероятность эпилептического приступа.</h2>
-                <p class="price"><b>Цена: 1200 грн/уп.</b></p>
+                <p class="price"><b>Цена: 999 грн/уп.</b></p>
                 <p class="stock"><b>В наличии</b></p>
                 <p><b><a href="index-zarontin.html">Купить Заронтин на FarmItal</a></b></p>
             </div>
