--- a/rus/index-nicetile-tab.html
+++ b/rus/index-nicetile-tab.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="main-info wrapper">
-        <h2>Ніцетіл / Nicetile / Ницетил таблетки:</h2>
+        <h2>Купить Ніцетіл / Nicetile / Ницетил таблетки:</h2>
         <p>Именно в FarmItal вы можете купить Ницетил, Nicetile, Ницетил таблетки в Украине. Гарантированно качественные!</p>
         <p>Доставка Nicetile таблетки осуществляется транспортными компаниями, сроки выполнения заказа оговариваются менеджером Фармитал.
             Вы можете заказать Ницетил, Nicetile, Ницетил таблетки в городах: Одесса, Херсон, Чернигов, Северодонецк, Бердянск, Бровары, Днепр, Винница, Киев, Славянск, Полтава, Краматорск, Белая Церковь, Каменское, Мариуполь, Черновцы, Александрия , Каменец-Подольский, Львов, Запорожье, Кропивницкий, Житомир, Ивано-Франковск, Сумы, Черкассы, Константиновка, Мелитополь, Кривой Рог, Ровно, Луцк, Никополь, Павлоград, Ужгород, Кременчуг, Лисичанск, Хмельницкий, Тернополь, Харьков, Николаев, а также других населенных пунктах Украины.
