--- a/index-medics.html
+++ b/index-medics.html
@@ -290,14 +290,14 @@
                 </div>
             </a>
         </div>
-        <!-- <div class="advantan-crema">
+        <div class="advantan-crema">
             <div class="advantan-crema-info">
                 <h2>Адвантан Крем 50г-(Advantan Crema 50g)</h2>
                 <p>Адвантан при місцевому застосуванні пригнічує запальні, алергійні реакції шкіри, а також реакції, пов’язані згіперпроліферацією клітин, що приводить до послаблення як об’єктивних симптомів (почервоніння, набряк, інфільтрація, ліхеніфікації), так і суб’єктивних скарг (свербіж, печіння, біль).
                     При місцевому застосуванні метил преднізолонуацепонату в ефективній дозі системний ефект є мінімальним. При нанесенні навеликі ділянки шкіри рівень кортизолу у плазмі залишається у межах нормального діапазону, не порушується його циркадний ритм. Також не встановлено зменшення екскреції кортизолу у добовій сечі.
-                <p><a href="index-advantan-crema.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+                <p><a href="index-advantan-50g.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
             </div>
-            <a href="index-advantan-crema.html">
+            <a href="index-advantan-50g.html">
                 <div class="advantan-crema-price">
                     <img class="ult" src="/img/advan-50.jpg" alt="купить адвантан крем 50г,advantan-crema 50g в Україні">
                     <p class="detal-inf">Ціна: 500 грн/уп.</p>
@@ -310,15 +310,43 @@
                 <p>Адвантан при місцевому застосуванні пригнічує запальні, алергійні реакції шкіри, а також реакції, пов’язані згіперпроліферацією клітин, що приводить до послаблення як об’єктивних симптомів (почервоніння, набряк, інфільтрація, ліхеніфікації), так і суб’єктивних скарг (свербіж, печіння, біль).
                     При місцевому застосуванні метил преднізолонуацепонату в ефективній дозі системний ефект є мінімальним. При нанесенні навеликі ділянки шкіри рівень кортизолу у плазмі залишається у межах нормального діапазону, не порушується його циркадний ритм. Також не встановлено зменшення екскреції кортизолу у добовій сечі.
                 </p>
-                <p><a href="index-advantan-crema-20g.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+                <p><a href="index-advantan-20g.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
             </div>
-            <a href="index-advantan-crema-20g.html">
+            <a href="index-advantan-20g.html">
                 <div class="advantan-crema-price">
                     <img class="ult" src="/img/advan-20.jpg" alt="купити адвантан крем 20г,advantan-crema 20g в Україні">
                     <p class="detal-inf">Ціна: 400 грн/уп.</p>
                 </div>
             </a>
-        </div> -->
+        </div>
+        <div class="crestor">
+            <div class="crestor-info">
+                <h2>Крестор 20мг-(Crestor 20mg)</h2>
+                <p>Первинна гіперхолестеринемія (тип ІІа, включаючи сімейну гетерозиготну гіперхолестеринемію) або змішанагіперхолестеринемія (тип ІІв) як доповнення до дієти, коли дієта та іншіне медикаментозні методи лікування (наприклад, фізичні вправи, зменшення ваги) є недостатніми.
+                    Сімейна гомозиготна гіперхолестеринемія як доповнення до дієти та іншої холестерин знижувальної терапії (наприклад, ЛПНЩ-аферез) або у випадках, коли така терапія не підходить пацієнту.</p>
+                <p><a href="index-crestor-20mg.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="index-crestor-20mg.html">
+                <div class="crestor-price">
+                    <img class="ult" src="/img/crestor-20mg.jpg" alt="купити крестор 20мг,crestor 20mg в Україні">
+                    <p class="detal-inf">Ціна: 440 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="crestor">
+            <div class="crestor-info">
+                <h2>Крестор 40мг-(Crestor 40mg)</h2>
+                <p>Первинна гіперхолестеринемія (тип ІІа, включаючи сімейну гетерозиготну гіперхолестеринемію) або змішанагіперхолестеринемія (тип ІІв) як доповнення до дієти, коли дієта та іншіне медикаментозні методи лікування (наприклад, фізичні вправи, зменшення ваги) є недостатніми.
+                    Сімейна гомозиготна гіперхолестеринемія як доповнення до дієти та іншої холестерин знижувальної терапії (наприклад, ЛПНЩ-аферез) або у випадках, коли така терапія не підходить пацієнту.</p>
+                <p><a href="index-crestor-40mg.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="index-crestor-40mg.html">
+                <div class="crestor-price">
+                    <img class="ult" src="/img/crestor-40mg.jpg" alt="купити крестор 40мг,crestor 40mg в Україні">
+                    <p class="detal-inf">Ціна: 540 грн/уп.</p>
+                </div>
+            </a>
+        </div>
     </div>
     <footer>
         <div class="footer-top">
