--- a/rus/index-medics.html
+++ b/rus/index-medics.html
@@ -268,15 +268,15 @@
                 </div>
             </a>
         </div>
-        <!-- <div class="advantan-crema">
+        <div class="advantan-crema">
             <div class="advantan-crema-info">
                 <h2>Адвантан Крем 50г-(Advantan Crema 50g)</h2>
                 <p>Адвантан при местном применении подавляет воспалительные, аллергические реакции кожи, а также реакции, связанные с гиперпролиферацией клеток, что приводит к ослаблению как объективных симптомов (покраснение, отек, инфильтрация, лихенификации), так и субъективных жалоб (зуд, жжение. , боль).
                     При местном применении метил преднизолонаацепоната в эффективной дозе системный эффект является минимальным. При нанесении на большие участки кожи уровень кортизола в плазме крови остается в пределах нормального диапазона, не нарушается его циркадный ритм. Также не установлено уменьшение экскреции кортизола в суточной моче.
                 </p>
-                <p><a href="index-advantan-crema.html" class="detal-inf"><b>Детальная информация о медикаменте.</b></a></p>
+                <p><a href="index-advantan-50g.html" class="detal-inf"><b>Детальная информация о медикаменте.</b></a></p>
             </div>
-            <a href="index-advantan-crema.html">
+            <a href="index-advantan-50g.html">
                 <div class="advantan-crema-price">
                     <img class="ult" src="/img/advan-50.jpg" alt="купить адвантан крем 50г,advantan-crema 50g в Украине">
                     <p class="detal-inf">Цена: 500 грн/уп.</p>
@@ -289,15 +289,43 @@
                 <p>Адвантан при местном применении подавляет воспалительные, аллергические реакции кожи, а также реакции, связанные с гиперпролиферацией клеток, что приводит к ослаблению как объективных симптомов (покраснение, отек, инфильтрация, лихенификации), так и субъективных жалоб (зуд, жжение. , боль).
                     При местном применении метил преднизолонаацепоната в эффективной дозе системный эффект является минимальным. При нанесении на большие участки кожи уровень кортизола в плазме крови остается в пределах нормального диапазона, не нарушается его циркадный ритм. Также не установлено уменьшение экскреции кортизола в суточной моче.
                 </p>
-                <p><a href="index-advantan-crema-20g.html" class="detal-inf"><b>Детальная информация о медикаменте.</b></a></p>
+                <p><a href="index-advantan-20g.html" class="detal-inf"><b>Детальная информация о медикаменте.</b></a></p>
             </div>
-            <a href="index-advantan-crema-20g.html">
+            <a href="index-advantan-20g.html">
                 <div class="advantan-crema-price">
                     <img class="ult" src="/img/advan-20.jpg" alt="купить адвантан крем 20г,advantan-crema 20g в Украине">
                     <p class="detal-inf">Цена: 400 грн/уп.</p>
                 </div>
             </a>
-        </div> -->
+        </div>
+        <div class="crestor">
+            <div class="crestor-info">
+                <h2>Крестор 20мг-(Crestor 20mg)</h2>
+                <p>Первоначальная гиперхолестеринемия (тип IIа, включая семейную гетерозиготную гиперхолестеринемию) или смешанная гиперхолестеринемия (тип ІІв) в качестве дополнения к диете, когда диета и другие медикаментозные методы лечения (например, физические упражнения, уменьшение веса) недостаточны.
+                    Семейная гомозиготная гиперхолестеринемия как дополнение к диете и другой холестерин понижающей терапии (например, ЛПНП-аферез) или в случаях, когда такая терапия не подходит пациенту.</p>
+                <p><a href="index-crestor-20mg.html" class="detal-inf"><b>Детальная информация о медикаменте.</b></a></p>
+            </div>
+            <a href="index-crestor-20mg.html">
+                <div class="crestor-price">
+                    <img class="ult" src="/img/crestor-20mg.jpg" alt="купить крестор 20мг,crestor 20mg в Украине">
+                    <p class="detal-inf">Цена: 440 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="crestor">
+            <div class="crestor-info">
+                <h2>Крестор 40мг-(Crestor 40mg)</h2>
+                <p>Первоначальная гиперхолестеринемия (тип IIа, включая семейную гетерозиготную гиперхолестеринемию) или смешанная гиперхолестеринемия (тип ІІв) в качестве дополнения к диете, когда диета и другие медикаментозные методы лечения (например, физические упражнения, уменьшение веса) недостаточны.
+                    Семейная гомозиготная гиперхолестеринемия как дополнение к диете и другой холестерин понижающей терапии (например, ЛПНП-аферез) или в случаях, когда такая терапия не подходит пациенту.</p>
+                <p><a href="index-crestor-40mg.html" class="detal-inf"><b>Подробная информация о медикаменте.</b></a></p>
+            </div>
+            <a href="index-crestor-40mg.html">
+                <div class="crestor-price">
+                    <img class="ult" src="/img/crestor-40mg.jpg" alt="купить крестор 40мг,crestor 40mg в Украине">
+                    <p class="detal-inf">Цена: 540 грн/уп.</p>
+                </div>
+            </a>
+        </div>
     </div>      
     <footer>
         <div class="footer-top">
