--- a/rus/index-zarontin.html
+++ b/rus/index-zarontin.html
@@ -48,7 +48,7 @@
         </div>
     </header>
     <div class="wrapper">
-        <h2>Заронтін - (Zarontin)</h2>
+        <h2>Заронтин - (Zarontin)</h2>
         <p class="prod">Производитель: <b>Италия</b></p>
         <div class="main-price">
             <div class="foto-zarontin">
