restart last version

--- a/rus/index-medics.html
+++ b/rus/index-medics.html
@@ -239,7 +239,7 @@
         </div>
         <div class="ultraproct-ung">
             <div class="ultraproct-ung-info">
-                <h2>Ультрапрокт свечи-(Ultraproct supposte)</h2>
+                <h2>Ультрапрокт свечи-(Ultraproct unguento)</h2>
                 <p>Флуокортолон оказывает противовоспалительное, против аллергическое и противозудное действие. Уменьшается дилятация капилляров, межклеточный отек и тканевая инфильтрация. Угнетается пролиферация капилляров.
                     Препарат Ультрапрокт содержит два эфира флуокортолона, начало главного действия которых приходится на разное время, что позволяет быстро достичь эффекта и долго его поддерживать (двухфазное действие).
                     Цинхокаин как локальный анестетик уменьшает болевые ощущения.</p>
