restart last version

--- a/index-medics.html
+++ b/index-medics.html
@@ -210,7 +210,7 @@
                 </div>
             </a>
         </div>
-        <div class="plavix">
+        <!-- <div class="plavix">
             <div class="plavix-info">
                 <h2>Плавікс №28 Туреччина-(Plavix №28 Turkey)</h2>
                 <p>Клопідогрель селективно пригнічує зв’язування аденозиндифосфату (АДФ) з рецептором на поверхні тромбоциту та наступну активацію комплексу GPIIb/IIIa під дією АДФ, і, таким чином, пригнічує агрегацію тромбоцитів.
@@ -225,7 +225,7 @@
                     <p class="detal-inf">Ціна: 330 грн/уп.</p>
                 </div>
             </a>
-        </div>
+        </div> -->
         <div class="methergin">
             <div class="methergin-info">
                 <h2>Метергін-(Метілeргометрін) / Methergin(Metilergometrina)</h2>
