--- a/rus/index-medics.html
+++ b/rus/index-medics.html
@@ -188,7 +188,7 @@
                 </div>
             </a>
         </div>
-        <div class="plavix">
+        <!-- <div class="plavix">
             <div class="plavix-info">
                 <h2>Плавикс №28 Турция-(Plavix №28 Turkey)</h2>
                 <p>Клопидогрель селективно ингибирует связывание аденозиндифосфата (АДФ) с рецептором на поверхности тромбоцита и последующую активацию комплекса GPIIb/IIIa под действием АДФ, и, таким образом, ингибирует агрегацию тромбоцитов.
@@ -203,7 +203,7 @@
                     <p class="detal-inf">Цена: 330 грн/уп.</p>
                 </div>
             </a>
-        </div>
+        </div> -->
         <div class="methergin">
             <div class="methergin-info">
                 <h2>Метергин-(Метилэргометрин) / Methergin(Metilergometrina)</h2>
@@ -239,7 +239,7 @@
         </div>
         <div class="ultraproct-ung">
             <div class="ultraproct-ung-info">
-                <h2>Ультрапрокт свечи-(Ultraproct unguento)</h2>
+                <h2>Ультрапрокт мазь-(Ultraproct unguento)</h2>
                 <p>Флуокортолон оказывает противовоспалительное, против аллергическое и противозудное действие. Уменьшается дилятация капилляров, межклеточный отек и тканевая инфильтрация. Угнетается пролиферация капилляров.
                     Препарат Ультрапрокт содержит два эфира флуокортолона, начало главного действия которых приходится на разное время, что позволяет быстро достичь эффекта и долго его поддерживать (двухфазное действие).
                     Цинхокаин как локальный анестетик уменьшает болевые ощущения.</p>
